--- a/styles/indexStyle.module.scss
+++ b/styles/indexStyle.module.scss
@@ -4,12 +4,20 @@
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
   &-mask {
     position: relative;
     top: 0;
     width: 50%;
     height: 100%;
     background-color: white;
+    transition: 1s;
+    &--show {
+      right: 0;
+    }
+    &--hide {
+      right: 50%;
+    }
   }
 }
 
@@ -56,8 +64,15 @@
 .enter {
   background-color: red;
   position: absolute;
-  bottom: 10%;
-  right: -80%;
   width: 100px;
   height: 50px;
+  transition: 1s;
+  &--show {
+    bottom: 10%;
+    right: -80%;
+  }
+  &--hide {
+    bottom: -50px;
+    right: -180%;
+  }
 }
