--- a/styles/indexStyle.module.scss
+++ b/styles/indexStyle.module.scss
@@ -1,6 +1,6 @@
 .cover {
   height: 100vh;
-  background-image: url('../public/images/cover.jpg');
+  background-image: url('~/assets/images/cover.jpg');
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -10,7 +10,7 @@
     top: 0;
     width: 50%;
     height: 100%;
-    background-color: white;
+    background-color: #ffffff;
     transition: 1s;
     &--show {
       right: 0;
@@ -31,7 +31,7 @@
     width: 350px;
     font-weight: bold;
   }
-  &-leaveEmail {
+  &-email {
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -44,7 +44,7 @@
       background-color: transparent;
       border: none;
       outline: none;
-      color: white;
+      color: #ffffff;
       flex-grow: 1;
       text-align: left;
       cursor: text;
@@ -52,11 +52,19 @@
         color: rgba(255, 255, 255, 0.6);
       }
     }
-    > p {
-      background-color: white;
+    &-subscribe {
+      background-color: #ffffff;
       padding: 4px 8px;
       font-size: 14px;
       margin-right: 10px;
+    }
+    &-confirm {
+      color: #ffffff;
+      &-icon {
+        > svg {
+          cursor: pointer;
+        }
+      }
     }
   }
 }
@@ -67,6 +75,7 @@
   width: 100px;
   height: 50px;
   transition: 1s;
+  cursor: pointer;
   &--show {
     bottom: 10%;
     right: -80%;
