--- a/views/layout/Header/headerStyle.module.scss
+++ b/views/layout/Header/headerStyle.module.scss
@@ -19,6 +19,13 @@
     }
   }
   &-logo {
-    cursor: pointer;
+    height: 60%;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    img {
+      cursor: pointer;
+      height: 100%;
+      aspect-ratio: 1/1;
+    }
   }
 }
