ci: 扩充字体图标

--- a/styles/abstracts/fontStyle.scss
+++ b/styles/abstracts/fontStyle.scss
@@ -2,11 +2,11 @@
 @font-face {
   font-family: 'iconfont';
   src: url('~/assets/fonts/iconfont/icomoon.eot?kbbxn2');
-  src: url('~/assets/fonts/iconfont/icomoon.eot?kbbxn2#iefix')
+  src: url('~/assets/fonts/iconfont/icomoon.eot?48izgv#iefix')
       format('embedded-opentype'),
-    url('~/assets/fonts/iconfont/icomoon.ttf?kbbxn2') format('truetype'),
-    url('~/assets/fonts/iconfont/icomoon.woff?kbbxn2') format('woff'),
-    url('~/assets/fonts/iconfont/icomoon.svg?kbbxn2#icomoon') format('svg');
+    url('~/assets/fonts/iconfont/icomoon.ttf?48izgv') format('truetype'),
+    url('~/assets/fonts/iconfont/icomoon.woff?48izgv') format('woff'),
+    url('~/assets/fonts/iconfont/icomoon.svg?48izgv#icomoon') format('svg');
 }
 
 @font-face {
