--- a/views/layout/Header/headerStyle.module.scss
+++ b/views/layout/Header/headerStyle.module.scss
@@ -1,31 +1,42 @@
 .header {
-    width: 100%;
-    position: relative;
-    height: 60px;
-    z-index: 10;
-    box-shadow: 0px 1px 5px gray;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 80px;
-    box-sizing: border-box;
-    &-nav {
-        display: flex;
-        overflow: visible;
-        > li {
-            margin: 15px;
-            padding: 5px;
-            cursor: pointer;
-        }
+  width: 100%;
+  position: relative;
+  height: 60px;
+  z-index: 10;
+  box-shadow: 0px 1px 5px gray;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 80px;
+  box-sizing: border-box;
+  &-logo {
+    height: 60%;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    img {
+      cursor: pointer;
+      height: 100%;
+      aspect-ratio: 1/1;
     }
-    &-logo {
-        height: 60%;
-        aspect-ratio: 1/1;
-        border-radius: 50%;
-        img {
-            cursor: pointer;
-            height: 100%;
-            aspect-ratio: 1/1;
-        }
+  }
+  &-nav {
+    font-family: 'iconfont';
+    height: 100%;
+    @include flex();
+    column-gap: 30px;
+    &-icon {
+      font-size: 25px;
+      //   font-weight: 600;
     }
+    &-avatar {
+      height: 65%;
+      img {
+        height: 100%;
+      }
+    }
+    &-divide {
+      border: 1px solid #000000;
+      height: 50%;
+    }
+  }
 }
