ci: 扩充字体图标 arrow

--- a/styles/abstracts/fontStyle.scss
+++ b/styles/abstracts/fontStyle.scss
@@ -1,12 +1,12 @@
 // 字体图标
 @font-face {
   font-family: 'iconfont';
-  src: url('~/assets/fonts/iconfont/icomoon.eot?kbbxn2');
-  src: url('~/assets/fonts/iconfont/icomoon.eot?48izgv#iefix')
+  src: url('~/assets/fonts/iconfont/icomoon.eot?tphizd');
+  src: url('~/assets/fonts/iconfont/icomoon.eot?tphizd#iefix')
       format('embedded-opentype'),
-    url('~/assets/fonts/iconfont/icomoon.ttf?48izgv') format('truetype'),
-    url('~/assets/fonts/iconfont/icomoon.woff?48izgv') format('woff'),
-    url('~/assets/fonts/iconfont/icomoon.svg?48izgv#icomoon') format('svg');
+    url('~/assets/fonts/iconfont/icomoon.ttf?tphizd') format('truetype'),
+    url('~/assets/fonts/iconfont/icomoon.woff?tphizd') format('woff'),
+    url('~/assets/fonts/iconfont/icomoon.svg?tphizd#icomoon') format('svg');
 }
 
 @font-face {
