--- a/views/layout/Footer/footerStyle.module.scss
+++ b/views/layout/Footer/footerStyle.module.scss
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  height: 200px;
+  height: $height-footer;
   background-color: #1c1c1c;
   box-sizing: border-box;
   &-body {
