--- a/views/layout/Header/headerStyle.module.scss
+++ b/views/layout/Header/headerStyle.module.scss
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   position: relative;
-  height: 60px;
+  height: $height-header;
   z-index: 10;
   box-shadow: 0px 1px 5px gray;
   display: flex;
