refactor: 头像从图片转化为字体图标

--- a/views/layout/Header/headerStyle.module.scss
+++ b/views/layout/Header/headerStyle.module.scss
@@ -26,13 +26,9 @@
     column-gap: 30px;
     &-icon {
       font-size: 25px;
-      //   font-weight: 600;
     }
     &-avatar {
-      height: 65%;
-      img {
-        height: 100%;
-      }
+      font-size: 30px;
     }
     &-divide {
       border: 1px solid #000000;
