ci: 扩充字体图标 arrow-right2

--- a/styles/abstracts/fontStyle.scss
+++ b/styles/abstracts/fontStyle.scss
@@ -1,12 +1,12 @@
 // 字体图标
 @font-face {
   font-family: 'iconfont';
-  src: url('~/assets/fonts/iconfont/icomoon.eot?tphizd');
-  src: url('~/assets/fonts/iconfont/icomoon.eot?tphizd#iefix')
+  src: url('~/assets/fonts/iconfont/icomoon.eot?hgf3z6');
+  src: url('~/assets/fonts/iconfont/icomoon.eot?hgf3z6#iefix')
       format('embedded-opentype'),
-    url('~/assets/fonts/iconfont/icomoon.ttf?tphizd') format('truetype'),
-    url('~/assets/fonts/iconfont/icomoon.woff?tphizd') format('woff'),
-    url('~/assets/fonts/iconfont/icomoon.svg?tphizd#icomoon') format('svg');
+    url('~/assets/fonts/iconfont/icomoon.ttf?hgf3z6') format('truetype'),
+    url('~/assets/fonts/iconfont/icomoon.woff?hgf3z6') format('woff'),
+    url('~/assets/fonts/iconfont/icomoon.svg?hgf3z6#icomoon') format('svg');
 }
 
 @font-face {
