refactor: 将箭头由 ant-design/icons 换成字体图标 arrow-right2

--- a/pages/indexStyle.module.scss
+++ b/pages/indexStyle.module.scss
@@ -67,12 +67,7 @@
       cursor: pointer;
       &-icon {
         cursor: inherit;
-        > svg {
-          cursor: inherit;
-          > path {
-            cursor: inherit;
-          }
-        }
+        font-family: 'iconfont';
       }
     }
   }
