ci: 添加 heart、chevron-right、heart、log-out、settings、twitch、user 的字体图标

--- a/styles/abstracts/fontStyle.scss
+++ b/styles/abstracts/fontStyle.scss
@@ -1,12 +1,12 @@
 // 字体图标
 @font-face {
-  font-family: 'iconfont';
-  src: url('~/assets/fonts/iconfont/icomoon.eot?hgf3z6');
-  src: url('~/assets/fonts/iconfont/icomoon.eot?hgf3z6#iefix')
+  font-family: 'iconFont';
+  src: url('~/assets/fonts/iconFont/icomoon.eot?li08db');
+  src: url('~/assets/fonts/iconFont/icomoon.eot?li08db#iefix')
       format('embedded-opentype'),
-    url('~/assets/fonts/iconfont/icomoon.ttf?hgf3z6') format('truetype'),
-    url('~/assets/fonts/iconfont/icomoon.woff?hgf3z6') format('woff'),
-    url('~/assets/fonts/iconfont/icomoon.svg?hgf3z6#icomoon') format('svg');
+    url('~/assets/fonts/iconFont/icomoon.ttf?li08db') format('truetype'),
+    url('~/assets/fonts/iconFont/icomoon.woff?li08db') format('woff'),
+    url('~/assets/fonts/iconFont/icomoon.svg?li08db#icomoon') format('svg');
 }
 
 @font-face {
