ci: 字体图标文件夹名称修改

--- a/components/card/cardStyle.module.scss
+++ b/components/card/cardStyle.module.scss
@@ -42,7 +42,7 @@
       color: #000000;
       font-weight: bold;
       &-arrow {
-        font-family: 'iconfont';
+        font-family: 'iconFont';
         padding-left: 10px;
         cursor: pointer;
       }
