--- a/components/carousel/carouselStyle.module.scss
+++ b/components/carousel/carouselStyle.module.scss
@@ -50,7 +50,7 @@
         &-show {
           cursor: pointer;
           &-arrow {
-            font-family: 'iconfont';
+            font-family: 'iconFont';
             padding-left: 10px;
             cursor: pointer;
           }
