--- a/pages/indexStyle.module.scss
+++ b/pages/indexStyle.module.scss
@@ -67,7 +67,7 @@
       cursor: pointer;
       &-icon {
         cursor: inherit;
-        font-family: 'iconfont';
+        font-family: 'iconFont';
       }
     }
   }
