--- a/styles/abstracts/fontStyle.scss
+++ b/styles/abstracts/fontStyle.scss
@@ -7,18 +7,21 @@
     url('~/assets/fonts/iconFont/icomoon.ttf?li08db') format('truetype'),
     url('~/assets/fonts/iconFont/icomoon.woff?li08db') format('woff'),
     url('~/assets/fonts/iconFont/icomoon.svg?li08db#icomoon') format('svg');
+  font-display: fallback;
 }
 
 @font-face {
   font-family: 'blackAng';
   src: url('~/assets/fonts/cover/blackAng/blackAng.woff') format('woff'),
     url('~/assets/fonts/cover/blackAng/blackAng.woff2') format('woff2');
+  font-display: fallback;
 }
 
 @font-face {
   font-family: 'agendaKing';
   src: url('~/assets/fonts/cover/agendaKing/agendaKing.woff') format('woff'),
     url('~/assets/fonts/cover/agendaKing/agendaKing.woff2') format('woff2');
+  font-display: fallback;
 }
 
 @font-face {
@@ -27,4 +30,5 @@
       format('woff'),
     url('~/assets/fonts/cover/zixinfangGothic/zixinfangGothic.woff2')
       format('woff2');
+  font-display: fallback;
 }
